common/src/main/java/alex/learn/antlr/demo4/OracleQueryParser.java
// Generated from E:/undergithub/flowingwater/flowingwater/springboot/driping-water/common/src/main/java/alex/learn/antlr/demo/demo4\OracleQuery.g4 by ANTLR 4.7
package alex.learn.antlr.demo4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OracleQueryParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, AS = 11, SELECT = 12, FROM = 13, TABLE = 14, MAX = 15, SUM = 16, AVG = 17,
            MIN = 18, COUNT = 19, ALL = 20, DISTINCT = 21, WHERE = 22, GROUP = 23, BY = 24, ORDER = 25,
            HAVING = 26, NOT = 27, IS = 28, TRUE = 29, FALSE = 30, UNKNOWN = 31, BETWEEN = 32, AND = 33,
            IN = 34, NULL = 35, OR = 36, ASC = 37, DESC = 38, LIMIT = 39, OFFSET = 40, ID = 41, TEXT_STRING = 42,
            ID_LITERAL = 43, REVERSE_QUOTE_ID = 44, DECIMAL_LITERAL = 45, WS = 46;
    public static final int
            RULE_tableName = 0, RULE_column_name = 1, RULE_function_name = 2, RULE_selectStatement = 3,
            RULE_selectElements = 4, RULE_tableSources = 5, RULE_whereClause = 6,
            RULE_logicExpression = 7, RULE_groupByCaluse = 8, RULE_havingCaluse = 9,
            RULE_orderByClause = 10, RULE_limitClause = 11, RULE_orderByExpression = 12,
            RULE_groupByItem = 13, RULE_logicalOperator = 14, RULE_comparisonOperator = 15,
            RULE_value = 16, RULE_decimalLiteral = 17, RULE_textLiteral = 18, RULE_selectElement = 19,
            RULE_fullColumnName = 20, RULE_functionCall = 21, RULE_aggregateWindowedFunction = 22,
            RULE_functionArg = 23, RULE_functionArgs = 24, RULE_uid = 25;
    public static final String[] ruleNames = {
            "tableName", "column_name", "function_name", "selectStatement", "selectElements",
            "tableSources", "whereClause", "logicExpression", "groupByCaluse", "havingCaluse",
            "orderByClause", "limitClause", "orderByExpression", "groupByItem", "logicalOperator",
            "comparisonOperator", "value", "decimalLiteral", "textLiteral", "selectElement",
            "fullColumnName", "functionCall", "aggregateWindowedFunction", "functionArg",
            "functionArgs", "uid"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "'*'", "','", "'('", "')'", "'&'", "'|'", "'='", "'>'", "'<'", "'!'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, "AS",
            "SELECT", "FROM", "TABLE", "MAX", "SUM", "AVG", "MIN", "COUNT", "ALL",
            "DISTINCT", "WHERE", "GROUP", "BY", "ORDER", "HAVING", "NOT", "IS", "TRUE",
            "FALSE", "UNKNOWN", "BETWEEN", "AND", "IN", "NULL", "OR", "ASC", "DESC",
            "LIMIT", "OFFSET", "ID", "TEXT_STRING", "ID_LITERAL", "REVERSE_QUOTE_ID",
            "DECIMAL_LITERAL", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "OracleQuery.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public OracleQueryParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class TableNameContext extends ParserRuleContext {
        public Token tmpName;

        public TerminalNode ID() {
            return getToken(OracleQueryParser.ID, 0);
        }

        public TableNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_tableName;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterTableName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitTableName(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitTableName(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TableNameContext tableName() throws RecognitionException {
        TableNameContext _localctx = new TableNameContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_tableName);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(52);
                ((TableNameContext) _localctx).tmpName = match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Column_nameContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(OracleQueryParser.ID, 0);
        }

        public Column_nameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_column_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterColumn_name(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitColumn_name(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitColumn_name(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Column_nameContext column_name() throws RecognitionException {
        Column_nameContext _localctx = new Column_nameContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_column_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(54);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Function_nameContext extends ParserRuleContext {
        public Token tmpName;

        public TerminalNode ID() {
            return getToken(OracleQueryParser.ID, 0);
        }

        public Function_nameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_function_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterFunction_name(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitFunction_name(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitFunction_name(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Function_nameContext function_name() throws RecognitionException {
        Function_nameContext _localctx = new Function_nameContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_function_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(56);
                ((Function_nameContext) _localctx).tmpName = match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SelectStatementContext extends ParserRuleContext {
        public TerminalNode SELECT() {
            return getToken(OracleQueryParser.SELECT, 0);
        }

        public SelectElementsContext selectElements() {
            return getRuleContext(SelectElementsContext.class, 0);
        }

        public TerminalNode FROM() {
            return getToken(OracleQueryParser.FROM, 0);
        }

        public TableSourcesContext tableSources() {
            return getRuleContext(TableSourcesContext.class, 0);
        }

        public OrderByClauseContext orderByClause() {
            return getRuleContext(OrderByClauseContext.class, 0);
        }

        public LimitClauseContext limitClause() {
            return getRuleContext(LimitClauseContext.class, 0);
        }

        public WhereClauseContext whereClause() {
            return getRuleContext(WhereClauseContext.class, 0);
        }

        public GroupByCaluseContext groupByCaluse() {
            return getRuleContext(GroupByCaluseContext.class, 0);
        }

        public HavingCaluseContext havingCaluse() {
            return getRuleContext(HavingCaluseContext.class, 0);
        }

        public SelectStatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_selectStatement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterSelectStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitSelectStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitSelectStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SelectStatementContext selectStatement() throws RecognitionException {
        SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_selectStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58);
                match(SELECT);
                setState(59);
                selectElements();
                setState(71);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == FROM) {
                    {
                        setState(60);
                        match(FROM);
                        setState(61);
                        tableSources();
                        setState(63);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == WHERE) {
                            {
                                setState(62);
                                whereClause();
                            }
                        }

                        setState(66);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == GROUP) {
                            {
                                setState(65);
                                groupByCaluse();
                            }
                        }

                        setState(69);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == HAVING) {
                            {
                                setState(68);
                                havingCaluse();
                            }
                        }

                    }
                }

                setState(74);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ORDER) {
                    {
                        setState(73);
                        orderByClause();
                    }
                }

                setState(77);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LIMIT) {
                    {
                        setState(76);
                        limitClause();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SelectElementsContext extends ParserRuleContext {
        public Token star;

        public List<SelectElementContext> selectElement() {
            return getRuleContexts(SelectElementContext.class);
        }

        public SelectElementContext selectElement(int i) {
            return getRuleContext(SelectElementContext.class, i);
        }

        public SelectElementsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_selectElements;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterSelectElements(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitSelectElements(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitSelectElements(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SelectElementsContext selectElements() throws RecognitionException {
        SelectElementsContext _localctx = new SelectElementsContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_selectElements);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(81);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__0: {
                        setState(79);
                        ((SelectElementsContext) _localctx).star = match(T__0);
                    }
                    break;
                    case MAX:
                    case SUM:
                    case AVG:
                    case MIN:
                    case COUNT:
                    case ID: {
                        setState(80);
                        selectElement();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(87);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__1) {
                    {
                        {
                            setState(83);
                            match(T__1);
                            setState(84);
                            selectElement();
                        }
                    }
                    setState(89);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TableSourcesContext extends ParserRuleContext {
        public List<TableNameContext> tableName() {
            return getRuleContexts(TableNameContext.class);
        }

        public TableNameContext tableName(int i) {
            return getRuleContext(TableNameContext.class, i);
        }

        public TableSourcesContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_tableSources;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterTableSources(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitTableSources(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitTableSources(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TableSourcesContext tableSources() throws RecognitionException {
        TableSourcesContext _localctx = new TableSourcesContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_tableSources);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(90);
                tableName();
                setState(95);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__1) {
                    {
                        {
                            setState(91);
                            match(T__1);
                            setState(92);
                            tableName();
                        }
                    }
                    setState(97);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class WhereClauseContext extends ParserRuleContext {
        public TerminalNode WHERE() {
            return getToken(OracleQueryParser.WHERE, 0);
        }

        public LogicExpressionContext logicExpression() {
            return getRuleContext(LogicExpressionContext.class, 0);
        }

        public WhereClauseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_whereClause;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterWhereClause(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitWhereClause(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitWhereClause(this);
            else return visitor.visitChildren(this);
        }
    }

    public final WhereClauseContext whereClause() throws RecognitionException {
        WhereClauseContext _localctx = new WhereClauseContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_whereClause);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(98);
                match(WHERE);
                setState(99);
                logicExpression(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LogicExpressionContext extends ParserRuleContext {
        public FullColumnNameContext fullColumnName() {
            return getRuleContext(FullColumnNameContext.class, 0);
        }

        public ComparisonOperatorContext comparisonOperator() {
            return getRuleContext(ComparisonOperatorContext.class, 0);
        }

        public List<ValueContext> value() {
            return getRuleContexts(ValueContext.class);
        }

        public ValueContext value(int i) {
            return getRuleContext(ValueContext.class, i);
        }

        public TerminalNode BETWEEN() {
            return getToken(OracleQueryParser.BETWEEN, 0);
        }

        public TerminalNode AND() {
            return getToken(OracleQueryParser.AND, 0);
        }

        public TerminalNode IN() {
            return getToken(OracleQueryParser.IN, 0);
        }

        public TerminalNode NOT() {
            return getToken(OracleQueryParser.NOT, 0);
        }

        public List<LogicExpressionContext> logicExpression() {
            return getRuleContexts(LogicExpressionContext.class);
        }

        public LogicExpressionContext logicExpression(int i) {
            return getRuleContext(LogicExpressionContext.class, i);
        }

        public LogicalOperatorContext logicalOperator() {
            return getRuleContext(LogicalOperatorContext.class, 0);
        }

        public LogicExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_logicExpression;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterLogicExpression(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitLogicExpression(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitLogicExpression(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LogicExpressionContext logicExpression() throws RecognitionException {
        return logicExpression(0);
    }

    private LogicExpressionContext logicExpression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        LogicExpressionContext _localctx = new LogicExpressionContext(_ctx, _parentState);
        LogicExpressionContext _prevctx = _localctx;
        int _startState = 14;
        enterRecursionRule(_localctx, 14, RULE_logicExpression, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(132);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                    case 1: {
                        setState(102);
                        fullColumnName();
                        setState(103);
                        comparisonOperator();
                        setState(104);
                        value();
                    }
                    break;
                    case 2: {
                        setState(106);
                        fullColumnName();
                        setState(107);
                        match(BETWEEN);
                        setState(108);
                        value();
                        setState(109);
                        match(AND);
                        setState(110);
                        value();
                    }
                    break;
                    case 3: {
                        setState(112);
                        fullColumnName();
                        setState(114);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == NOT) {
                            {
                                setState(113);
                                match(NOT);
                            }
                        }

                        setState(116);
                        match(IN);
                        setState(117);
                        match(T__2);
                        setState(118);
                        value();
                        setState(123);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__1) {
                            {
                                {
                                    setState(119);
                                    match(T__1);
                                    setState(120);
                                    value();
                                }
                            }
                            setState(125);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(126);
                        match(T__3);
                    }
                    break;
                    case 4: {
                        setState(128);
                        match(T__2);
                        setState(129);
                        logicExpression(0);
                        setState(130);
                        match(T__3);
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(140);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new LogicExpressionContext(_parentctx, _parentState);
                                pushNewRecursionContext(_localctx, _startState, RULE_logicExpression);
                                setState(134);
                                if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
                                setState(135);
                                logicalOperator();
                                setState(136);
                                logicExpression(6);
                            }
                        }
                    }
                    setState(142);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class GroupByCaluseContext extends ParserRuleContext {
        public TerminalNode GROUP() {
            return getToken(OracleQueryParser.GROUP, 0);
        }

        public TerminalNode BY() {
            return getToken(OracleQueryParser.BY, 0);
        }

        public List<GroupByItemContext> groupByItem() {
            return getRuleContexts(GroupByItemContext.class);
        }

        public GroupByItemContext groupByItem(int i) {
            return getRuleContext(GroupByItemContext.class, i);
        }

        public GroupByCaluseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_groupByCaluse;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterGroupByCaluse(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitGroupByCaluse(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitGroupByCaluse(this);
            else return visitor.visitChildren(this);
        }
    }

    public final GroupByCaluseContext groupByCaluse() throws RecognitionException {
        GroupByCaluseContext _localctx = new GroupByCaluseContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_groupByCaluse);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(143);
                match(GROUP);
                setState(144);
                match(BY);
                setState(145);
                groupByItem();
                setState(150);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__1) {
                    {
                        {
                            setState(146);
                            match(T__1);
                            setState(147);
                            groupByItem();
                        }
                    }
                    setState(152);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class HavingCaluseContext extends ParserRuleContext {
        public TerminalNode HAVING() {
            return getToken(OracleQueryParser.HAVING, 0);
        }

        public LogicExpressionContext logicExpression() {
            return getRuleContext(LogicExpressionContext.class, 0);
        }

        public HavingCaluseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_havingCaluse;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterHavingCaluse(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitHavingCaluse(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitHavingCaluse(this);
            else return visitor.visitChildren(this);
        }
    }

    public final HavingCaluseContext havingCaluse() throws RecognitionException {
        HavingCaluseContext _localctx = new HavingCaluseContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_havingCaluse);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(153);
                match(HAVING);
                setState(154);
                logicExpression(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OrderByClauseContext extends ParserRuleContext {
        public TerminalNode ORDER() {
            return getToken(OracleQueryParser.ORDER, 0);
        }

        public TerminalNode BY() {
            return getToken(OracleQueryParser.BY, 0);
        }

        public List<OrderByExpressionContext> orderByExpression() {
            return getRuleContexts(OrderByExpressionContext.class);
        }

        public OrderByExpressionContext orderByExpression(int i) {
            return getRuleContext(OrderByExpressionContext.class, i);
        }

        public OrderByClauseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_orderByClause;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).enterOrderByClause(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OracleQueryListener) ((OracleQueryListener) listener).exitOrderByClause(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OracleQueryVisitor) return ((OracleQueryVisitor<? extends T>) visitor).visitOrderByClause(this);
            else return visitor.visitChildren(this);
        }
    }
